--- a/main.css
+++ b/main.css
@@ -1,7 +1,9 @@
 body {
   margin: 0;
-  background-color: #000;
-  color: #fff;
+  background-image: radial-gradient(#aa383a 1px, transparent 1px);
+  background-size: calc(10 * 1px) calc(10 * 1px);
+  background-color: #fef0bc;
+  /* color: #fff; */
   font-family: Monospace;
   font-size: 13px;
   line-height: 24px;
